Adding SNS topic encryption

--- a/Shift-Management-Amazon-Pinpoint-2-way-SMS.yaml
+++ b/Shift-Management-Amazon-Pinpoint-2-way-SMS.yaml
@@ -375,6 +375,7 @@ Resources:
             reason: Not required.
     Properties:
       DisplayName: "2waySMSPinpoint-shifts"
+      KmsMasterKeyId: alias/aws/sns
       Subscription:
         -
           Endpoint: !GetAtt LambdaTwoWaySMS.Arn
